--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 configure_file(buildprop.h.in buildprop.h)
 
+add_subdirectory(si5351)
 add_subdirectory(firmware)
