chore(): a lot of features...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ project(gpsdo)
 
 pico_sdk_init()
 
-set(APPLICATION_NAME "GPS Dominated Oscillator for RaspberryPi Pico")
+set(APPLICATION_NAME "GPS Dominated Oscillator for RaspberryPi Pico (RP2040)")
 set(APPLICATION_VERSION_MAJOR "0")
-set(APPLICATION_VERSION_MINOR "4")
+set(APPLICATION_VERSION_MINOR "5")
 set(APPLICATION_VERSION_PATCH "0")
 
 set(ORGANIZATION_NAME "The HellNet.org")
