--- a/src/firmware/CMakeLists.txt
+++ b/src/firmware/CMakeLists.txt
@@ -6,13 +6,18 @@ configure_file(buildflags.h.in buildflags.h)
 add_executable(gpsdo
         buildflags.h.in
         config.h
+        counter.h counter.c
         gps.h gps.c
         led.h led.c
         log.h log.c
         main.h main.c
+#        oscillator.h oscillator.c
         timertc.h timertc.c
         ui.h ui.c
         version.h.in)
+
+#pico_generate_pio_header(gpsdo
+#        ${CMAKE_CURRENT_LIST_DIR}/counter.pio)
 
 target_link_libraries(gpsdo
         pico_stdlib
@@ -24,6 +29,8 @@ target_link_libraries(gpsdo
         hardware_pwm
         hardware_irq
         hardware_i2c
+        hardware_pio
+        hardware_dma
         si5351)
 
 pico_enable_stdio_usb(gpsdo 1)
