fix(oscillator): fixes oscillator reference clock

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,6 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 configure_file(buildprop.h.in buildprop.h)
 
+add_subdirectory(si5351-test)
 add_subdirectory(si5351)
 add_subdirectory(firmware)
