chore(repo): first working version

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,5 @@ configure_file(buildprop.h.in buildprop.h)
 
 add_subdirectory(si5351-test)
 add_subdirectory(si5351)
+add_subdirectory(lcd)
 add_subdirectory(firmware)
