--- a/src/lcd/CMakeLists.txt
+++ b/src/lcd/CMakeLists.txt
@@ -6,3 +6,6 @@ add_library(lcd
 target_link_libraries(lcd
         pico_stdlib
         hardware_gpio)
+
+target_include_directories(lcd
+        PUBLIC ${CMAKE_CURRENT_LIST_DIR})
